[gd_scene load_steps=2 format=3 uid="uid://d0oyudtogrqxx"]

[ext_resource type="Script" path="res://scripts/image_editor.gd" id="1_70gcu"]

[node name="image_editor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_70gcu")

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="title" type="Label" parent="buttons"]
layout_mode = 2

[node name="open" type="Button" parent="buttons"]
layout_mode = 2
text = "üìÅ"

[node name="close" type="Button" parent="buttons"]
layout_mode = 2
text = "‚úñ"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="image_view" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="file_dialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(312, 157)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("\"*.bmp, *.dds, *.exr, *.hdr, *.jpg, *.jpeg, *.png, *.tga, *.svg, *.svgz, *.webp\"; \"Supported Images\"")
show_hidden_files = true

[connection signal="pressed" from="buttons/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="buttons/close" to="." method="_on_close_pressed"]
[connection signal="file_selected" from="file_dialog" to="." method="_on_file_dialog_file_selected"]
